--- a/src/views/rapports.ejs
+++ b/src/views/rapports.ejs
@@ -10,53 +10,76 @@
                 <div class="content">
 					<div class="container-fluid">
 						<h4 class="page-title">Rapports</h4>
+                      <form action="/rapports" method="post">
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Liste des floats</h4>
-                                <p class="d-flex justify-content-end mx-5">	<button class="btn btn-primary"><i class="icon-big la la-file-pdf-o"></i> Génerer le pdf</button></p>
+                               <div class="row">
+                                <div class="col-3">
+                                    <label class="form-check-label">
+                                        <span class="form-check-sign">Date du debut</span>
+                                        <input type="date" name="start" class="form-control input-pill" id="pillInput" placeholder="Pill Input">
+                                     
+                                    </label>
+                                 </div>
+                                <div class="col-3">
+                                    <label class="form-check-label">
+                                        <span class="form-check-sign">Date de fin</span>
+                                        <input type="date" name="end" class="form-control input-pill" id="pillInput" placeholder="Pill Input">
+                                        
+                                    </label>
+                                 </div>
+                                
+                                <div class="col-3">
+                                    <p class="d-flex justify-content-center">	<button class="btn btn-warning" type="submit"><i class="icon-big la la-file-pdf-o"></i>Afficher</button></p>
+                                </div>
+                                <div class="col-3">
+                                    <p class="d-flex justify-content-center ">	<a class="btn btn-primary" href="/pdf"><i class="icon-big la la-file-pdf-o"></i> Génerer le pdf</a></p>
+                                </div>
+
+                               </div>
                                 <p class="card-category">Veillez sélectionner les floats pour avoir le rapport</p>
                             </div>
-                            <div class="card-body">
-                                <ol class="list-group">
+                            <div class="card-body row">
+                                <ol class="list-group col-5">
                                     <li class="list-group-item">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="">
-                                            <span class="form-check-sign">Mercedes</span>
+                                            <input class="form-check-input" type="checkbox"  id="selectAll">
+                                            <span class="form-check-sign">Tous selectionner</span>
                                         </label>
                                     </li>
-                                    <li class="list-group-item">
+                                    <% data.forEach(item=>{%>
+<li class="list-group-item">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="">
-                                            <span class="form-check-sign">Toyota</span>
+                                            <input class="form-check-input option" name="<%= item.id %>" type="checkbox" value="<%= item.id %>">
+                                            <span class="form-check-sign"><%= item.name %></span>
                                         </label>
                                     </li>
-                                    <li class="list-group-item">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="">
-                                            <span class="form-check-sign">Toyota</span>
-                                        </label>
-                                    </li>
-                                    <li class="list-group-item">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="">
-                                            <span class="form-check-sign">Toyota</span>
-                                        </label>
-                                    </li>
-                                    <li class="list-group-item">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="">
-                                            <span class="form-check-sign">Toyota</span>
-                                        </label>
-                                    </li>
-                                    <li class="list-group-item" >
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="">
-                                            <span class="form-check-sign">Toyota</span>
-                                        </label>
-                                    </li>
+                                        <% }) ; %>
                                 </ol>
+                                <div class="table-responsive col-7">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Nom</th>
+                                                <th>Kilométrage</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="float">
+                                            <% data.forEach(item => { %>
+                                                <tr>
+                                                    <td><%= item.num %></td>
+                                                    <td><%= item.name %></td>
+                                                    <td><%= item.brand %></td>
+                                                </tr>
+                                              <% }); %>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
+                      </form>
 					</div>
 				</div>
 				<%- include('components/footer') %>
@@ -67,4 +90,21 @@
 	<%- include('components/modal') %>
 </body>
 <%- include('components/scripts') %>
+<script>
+    const selectAllCheckbox = document.getElementById('selectAll');
+    const optionCheckboxes = document.querySelectorAll('.option');
+  
+    selectAllCheckbox.addEventListener('change', function() {
+      optionCheckboxes.forEach(checkbox => {
+        checkbox.checked = this.checked;
+      });
+    });
+  
+    optionCheckboxes.forEach(checkbox => {
+      checkbox.addEventListener('change', function() {
+        const allChecked = Array.from(optionCheckboxes).every(checkbox => checkbox.checked);
+        selectAllCheckbox.checked = allChecked;
+      });
+    });
+  </script>
 </html>
