--- a/src/views/components/head.ejs
+++ b/src/views/components/head.ejs
@@ -6,5 +6,6 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="stylesheet" href="/assets/css/ready.css">
 	<link rel="stylesheet" href="/assets/css/demo.css">
-	
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
