ajout du model et des controller pour les users

--- a/src/views/components/side_bar.ejs
+++ b/src/views/components/side_bar.ejs
@@ -57,6 +57,13 @@
                     <!-- <span class="badge badge-count">5</span> -->
                 </a>
             </li>
+            <li class="nav-item active">
+                <a href="/admin">
+                    <i class="la la-folder-open"></i>
+                    <p>Users</p>
+                    <!-- <span class="badge badge-count">5</span> -->
+                </a>
+            </li>
             
             
             
