--- a/src/views/components/side_bar.ejs
+++ b/src/views/components/side_bar.ejs
@@ -21,16 +21,6 @@
                                 <span class="link-collapse">Mon Profile</span>
                             </a>
                         </li>
-                        <li>
-                            <a href="#edit">
-                                <span class="link-collapse">Editer Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#settings">
-                                <span class="link-collapse">Paramètres</span>
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -59,7 +49,7 @@
             </li>
             <li class="nav-item active">
                 <a href="/admin">
-                    <i class="la la-folder-open"></i>
+                    <i class="la la-users"></i>
                     <p>Users</p>
                     <!-- <span class="badge badge-count">5</span> -->
                 </a>
