--- a/src/views/components/modal.ejs
+++ b/src/views/components/modal.ejs
@@ -1,20 +1,38 @@
-<div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUpdatePro" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header bg-primary">
-                <h6 class="modal-title"><i class="la la-frown-o"></i> Under Development</h6>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+	
+     <!-- Modal -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Nouvelle utilisateur</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-            <div class="modal-body text-center">									
-                <p>Currently the pro version of the <b>Ready Dashboard</b> Bootstrap is in progress development</p>
-                <p>
-                    <b>We'll let you know when it's done</b></p>
+            <div class="modal-body">
+                <form class="justify-content-center">
+                    <div class="d-flex justify-content-center">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Prénom*</label>
+                            <input type="text" name="prenom" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Prénom de l'utilisateur">
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputEmail1">Nom*</label>
+                            <input type="text" name="nom" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nom de l'utilisateur">
+                          </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Adresse email*</label>
+                      <input type="email" name="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrez un email">
+                    </div>
+                  
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Mot de passe</label>
+                      <input type="password" name="password" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="12345678" disabled>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+          </div>
         </div>
-    </div>
-</div>
+      </div>
