--- a/src/views/rapports.ejs
+++ b/src/views/rapports.ejs
@@ -55,7 +55,7 @@
                                     <% data.forEach((item, i)=>{%>
                                     <li class="list-group-item mt-2">
                                         <label class="form-check-label">
-                                            <input class="form-check-input option" name="<%= item.id %>" type="checkbox" value="<%= item.id %>">
+                                            <input class="form-check-input option" name="<%= item.name %>" type="checkbox" value="<%= item.id %>">
                                             <span class="form-check-sign"><%= i+1 %>. <%= item.name %></span>
                                         </label>
                                     </li>
